# CPPPackDev

./: CMakeLists.txt  README.md  main.cpp
cppenv/: CMakeLists.txt  cppenv.json  main.cpp
cppenv/include/cppenv/: CMakeManager.h  LibraryManager.h  cppenv.h
cppenv/src/: CMakeManager.cpp  LibraryManager.cpp  cppenv.cpp
include/: ProjectManager.h
src/: ProjectManager.cpp
